# 3D_Viewer

./: README.md  README_RUS.md
C++_3DViewer/: README.md  README_RUS.md
C++_3DViewer/src/: CMakeLists.txt  Makefile  documentation.md
C++_3DViewer/src/Controller/: s21_controller.cc  s21_controller.h
C++_3DViewer/src/Model/: s21_loader.cc  s21_loader.h  s21_model.h  s21_transformations.h
C++_3DViewer/src/Tests/: s21_tests.cc
C++_3DViewer/src/View/: s21_appsettings.cc  s21_capturestrategy.cc  s21_capturestrategy.h  s21_glwidget.cc  s21_glwidget.h  s21_main.cc  s21_mainwindow.cc  s21_mainwindow.h  s21_mainwindow.ui
C_DViewer/: README.md  README_RUS.md
